tdf#92521 DOCX export: handle section break right after a table

DocxAttributeOutput::SectionBreaks() previously only handled the
text-text and text-table node transitions; implement support for
table-text to avoid loosing a page break on export for the bugdoc.

(View this commit with whitespace ignored to filter out the noise about
SectionBreaks() now accepting non-text nodes, too.)

Change-Id: Ie8a1575374a207399351635bda8c0c076ce7268d
(cherry picked from commit c916152d8562cab868d4c522748ac30029fad179)
Reviewed-on: https://gerrit.libreoffice.org/18759
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 3660e3c87d7aebb3bcec75268f8be0742680c4f6)