sw/source/filter/ww8/docxexport.cxx
@@ -499,6 +499,9 @@ void DocxExport::OutputEndNode( const SwEndNode& rEndNode )
             m_pSections->AppendSection( m_pAktPageDesc, pParentFormat, nRstLnNum );
         }
     }
+    else if (TXT_MAINTEXT == m_nTextTyp && rEndNode.StartOfSectionNode()->IsTableNode())
+        // End node of a table: see if a section break should be written after the table.
+        AttrOutput().SectionBreaks(rEndNode);
 }
 
 void DocxExport::OutputGrfNode( const SwGrfNode& )
