sw/source/filter/ww8/ww8attributeoutput.hxx
@@ -36,7 +36,7 @@ public:
     virtual void EndParagraph( ww8::WW8TableNodeInfoInner::Pointer_t pTextNodeInfoInner ) SAL_OVERRIDE;
 
     /// Called in order to output section breaks.
-    virtual void SectionBreaks(const SwTextNode& /*rNode*/) SAL_OVERRIDE {}
+    virtual void SectionBreaks(const SwNode& /*rNode*/) SAL_OVERRIDE {}
 
     /// Called before we start outputting the attributes.
     virtual void StartParagraphProperties() SAL_OVERRIDE {}
